--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab:wght@400;500;600;700;800;900&display=swap');
+
 :root {
   --light-clr: #fff;
   --accent-clr: #011b2d; /*003459*/
@@ -124,6 +126,46 @@ button{
 }
 .success{
   color: var(--green-clr);
+}
+.about-header{
+    font-family: 'Roboto Slab', sans-serif;
+    font-weight: 900;
+    font-size: 3.5rem;
+}
+.modal{
+    position: absolute;
+    z-index: 1000;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.8);
+}
+.modal-container{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.modal-content{
+    background: var(--light-clr);
+    box-shadow: 0 10px 10px var(--black-clr);
+    border-radius: 1rem;
+    position: relative;
+}
+.close-modal{
+    display: block;
+    background: rgba(0, 0, 0, 0.4);
+    color: var(--gray-clr);
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.close-modal-icon{
+    width: 36px;
+    height: 36px;
 }
 
 @media( max-width: 540px ) {
